# icp_music_bs

./: Cargo.toml  NOTES.MD  README.md  dfx.json  old_readme.md  package-lock.json  package.json  webpack.config.js
src/_pattgen_frontend_demo/src/: index.html  index.js
src/pattgen_backend/: Cargo.toml  pattgen_backend.did
src/pattgen_backend/src/: http.rs  lib.rs
src/pattgen_frontend/assets/: main.css  panelsnap.js
src/pattgen_frontend/src/: .ic-assets.json5  index.html  index.js
